# CorePulse

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROGRESS.md  README.md  corepulse.desktop  corepulse.sh  pyproject.toml  requirements.txt  setup.sh  thermalcore.desktop  thermalcore.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: CODING_STANDARDS.md  COMMIT_STANDARDS.md  CONVENTIONS.md  DEVELOPMENT.md  INSTALL.md  PROGRESS.md
examples/: alert_watcher.py  demo_app.py
hw-monitor/: PROGRESS.md  README.md  RESTRUCTURE.md  pyproject.toml  requirements.txt  setup.sh
hw-monitor/src/: app.py  main.py
hw-monitor/src/sensors/: __init__.py  base_sensor.py  cpu_sensor.py  gpu_sensor.py  poller.py  system_sensor.py
hw-monitor/src/ui/: chart_widget.py  main_window.py  sensor_widget.py  styles.py
hw-monitor/src/utils/: config.py
packaging/: build-deb.sh
src/: __init__.py  app.py  main.py
src/sensors/: __init__.py  base_sensor.py  cpu_sensor.py  gpu_sensor.py  poller.py  system_sensor.py
src/ui/: __init__.py  icons.py  main_window.py  styles.py  system_info.py  theme_watcher.py
src/utils/: __init__.py  config.py  ipc.py  logger.py
tests/: __init__.py  test_config.py  test_sensors.py
tests/benchmarks/: __init__.py  bench_polling.py  bench_sensors.py  bench_startup.py
