[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corepulse"
version = "1.0.0"
description = "Real-time CPU and GPU temperature monitor for Linux"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Vicen-te" },
]
keywords = ["temperature", "monitor", "hardware", "cpu", "gpu", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "PySide6>=6.5",
    "psutil>=5.9",
    "nvidia-ml-py>=12.0",
]

[project.urls]
Homepage = "https://github.com/Vicen-te/CorePulse"
Repository = "https://github.com/Vicen-te/CorePulse"

[project.scripts]
corepulse = "main:main"

[project.gui-scripts]
corepulse-gui = "main:main"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
